# MatrixZulipBridge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml  pre-commit.yml  python-publish.yml  tests.yml
matrixzulipbridge/: __init__.py  __main__.py  appservice.py  command_parse.py  control_room.py  direct_room.py  event_queue.py  organization_room.py  personal_room.py  private_room.py  room.py  space_room.py  stream_room.py  types.py  under_organization_room.py  version.py  websocket.py  zulip.py
tests/: test_import.py
