[tool.poetry]
name = "matrixzulipbridge"
version = "0.4.1"
description = "A Matrix puppeting bridge for Zulip"
authors = ["GearKite <emgh@em.id.lv>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
matrix-zulip-bridge = 'matrixzulipbridge.__main__:main'

[tool.poetry.dependencies]
python = "^3.10"
zulip = "^0.9"
python-dotenv = "^1"
mautrix = "^0.20"
emoji = "^2"
markdownify = "^0.10"
coloredlogs = "^15"
ruamel-yaml = ">=0.16, <0.18"
bidict = "^0.22"
zulip-emoji-mapping = "^1.0.1"
beautifulsoup4 = "^4.6.2"

[tool.poetry.group.dev.dependencies]
black = "^23"
pylint = "^3"
isort = "^5.13"
pre-commit = "^3.6"
pytest = ">=7, <9"
pytest-cov = "^4"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
